--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -4,8 +4,13 @@
 
 //font-family: 'Montserrat', sans-serif;
 
-h1,h2,h3,h4,h5,h6{
+h2,h3,h4,h5,h6{
     font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+
+h1{
+    font-family: 'Cabin Sketch', sans-serif;
     font-weight: 700;
 }
 
