added scroll trigger to artist section

--- a/dev/scss/sections/_index.scss
+++ b/dev/scss/sections/_index.scss
@@ -157,6 +157,7 @@ h1{
             align-items: center;
             padding-left: 25%;
             font-size: rem-calc(40);
+            color: $yellow;
 
         }
 
