--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -582,6 +582,7 @@ header div #burger-container i {
   align-items: center;
   padding-left: 25%;
   font-size: 2.5rem;
+  color: #FFE103;
 }
 #index #artists #artists-headline #artist-headline-text {
   grid-area: content;
