--- a/dev/scss/sections/_index.scss
+++ b/dev/scss/sections/_index.scss
@@ -52,12 +52,13 @@
     }
 
     #index-content {
-        background-color: $light-grey;
+        background-color: $dark-grey;
         display: grid;
         grid-template-columns: 5% auto 5%;
         grid-template-areas: ". content .";
         padding-top: 50px;
         padding-bottom: 50px;
+        color: black;
 
         @include lg {
             grid-template-columns: auto 800px auto;
@@ -91,9 +92,11 @@
                 justify-content: center;
                 align-items: center;
                 padding: 20px;
-                // h2{
-                //     display: none;
-                // }
+                color: black;
+                h2{
+                    display: none;
+                   //visibility:hidden;
+                }
 
 
                 a {
@@ -141,8 +144,8 @@
 // }
 
     #artists-headline {
-        background-color: $dark-grey;
-        color: white;
+        background-color: $light-grey;
+        color: black;
         display: grid;
         grid-template-columns: 80% auto;
         grid-template-areas: "content" "arrow";
@@ -160,7 +163,7 @@
             align-items: center;
             padding-right: 100%;
             font-size: rem-calc(40);
-            color: $yellow;
+            color: $black;
             justify-content: center;
 
         }
