arrow spin and cursor

--- a/dev/scss/sections/_index.scss
+++ b/dev/scss/sections/_index.scss
@@ -64,6 +64,9 @@
             grid-template-columns: auto 800px auto;
         }
 
+        #spiral-animation{
+            cursor: pointer;
+        }
 
         >div {
             padding-top: 20px;
