--- a/dev/scss/sections/_upload.scss
+++ b/dev/scss/sections/_upload.scss
@@ -39,7 +39,7 @@
 body {
     background-color:transparent;
     // text-align:center;
-    color: #777;
+    // color: #777;
   }
   
   #spiral-animation {
