--- a/dev/scss/sections/_index.scss
+++ b/dev/scss/sections/_index.scss
@@ -95,7 +95,7 @@
                 justify-content: center;
                 align-items: center;
                 padding: 20px;
-                color: black;
+                color: white;
                 h2{
                     display: none;
                    //visibility:hidden;
